@@ -30,6 +30,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 import org.jdbi.v3.core.Handle;
@@ -46,7 +47,6 @@ import org.jdbi.v3.core.generic.GenericType;
 import org.jdbi.v3.core.mapper.RowMapper;
 import org.jdbi.v3.core.mapper.RowMappers;
 import org.jdbi.v3.core.rewriter.RewrittenStatement;
-import org.jdbi.v3.core.transaction.TransactionState;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -117,29 +117,28 @@ public abstract class SqlStatement<This extends SqlStatement<This>> extends Base
     }
 
     /**
-     * Close the handle when the statement is closed.
-     *
-     * @return the same Query instance
+     * When the statement is closed, commit it and then close the owning Handle.
+     * @return this
      */
-    public This cleanupHandle()
+    public This cleanupHandleCommit()
     {
-        return cleanupHandle(TransactionState.ROLLBACK);
+        return cleanupHandle(Handle::commit);
     }
 
     /**
      * When the statement is closed, roll it back then close the owning Handle.
      * @return this
      */
-    public This cleanupHandle(final TransactionState state)
+    public This cleanupHandleRollback()
     {
+        return cleanupHandle(Handle::rollback);
+    }
+
+    private This cleanupHandle(Consumer<Handle> action) {
         addCleanable(() -> {
             if (handle != null) {
                 if (handle.isInTransaction()) {
-                    if (state == TransactionState.COMMIT) {
-                        handle.commit();
-                    } else {
-                        handle.rollback();
-                    }
+                    action.accept(handle);
                 }
                 handle.close();
             }
